--- a/README
+++ b/README
@@ -48,4 +48,5 @@ Atualmente estou focado em construir minha carreira em tecnologia, com interesse
 ## 📫 Contato
 
 - GitHub: https://github.com/ViniciosMarques  
-- LinkedIn: (adicione seu link aqui)
+- LinkedIn: www.linkedin.com/in/vinicioslmarques
+
