--- a/README
+++ b/README
@@ -1,69 +1,80 @@
-<h1 align="center">Olá, eu sou Vinicios Lourenço Marques 👋</h1>
+<div align="center">
 
-<h3 align="center">
-Estudante de Software | Backend | Em transição de carreira para tecnologia
-</h3>
+<img src="https://capsule-render.vercel.app/api?type=waving&color=0D1117&height=200&section=header&text=Vinicios%20Lourenço%20Marques&fontSize=40&fontColor=ffffff&animation=fadeIn"/>
 
-<p align="center">
-🚀 Focado em Sistemas, Suporte Técnico e Desenvolvimento Backend  
-<br>
-📊 Experiência em gestão, vendas e atendimento ao cliente  
+<br/>
+
+<h2>🚀 Desenvolvedor de Software | Backend | Em transição de carreira</h2>
+
+<p>
+Estudante de desenvolvimento de software, com experiência em gestão, vendas e liderança.<br/>
+Atualmente focado em backend, automação e sistemas corporativos.
 </p>
+
+<br/>
+
+<img src="https://github-readme-stats.vercel.app/api?username=ViniciosMarques&show_icons=true&theme=radical&hide_border=true"/>
+
+<img src="https://github-readme-stats.vercel.app/api/top-langs/?username=ViniciosMarques&layout=compact&theme=radical&hide_border=true"/>
+
+<br/><br/>
+
+</div>
 
 ---
 
-## 👨‍💻 Sobre mim
+## 🧠 Sobre mim
 
-Sou estudante de desenvolvimento de software em transição de carreira para a área de tecnologia.  
-Tenho mais de 5 anos de experiência com vendas e mais de 1 ano como gerente, atuando com liderança, organização de processos e atendimento ao cliente.
+Sou estudante de desenvolvimento de software em transição de carreira para tecnologia.  
+Atuei por mais de 5 anos com vendas e mais de 1 ano como gerente, desenvolvendo habilidades em liderança, gestão de processos e atendimento ao cliente.
 
-Atualmente estou focado em construir minha carreira em tecnologia, com interesse em:
+Hoje estou focado em construir uma carreira sólida em tecnologia, com interesse em:
 
+- Backend  
 - Suporte técnico  
 - Sistemas corporativos  
-- Desenvolvimento backend  
-- Automação de processos  
+- Automação  
 
 ---
 
-## 🚀 Tecnologias
-
-<p>
-  <img src="https://img.shields.io/badge/Java-ED8B00?style=for-the-badge&logo=openjdk&logoColor=white"/>
-  <img src="https://img.shields.io/badge/JavaScript-F7DF1E?style=for-the-badge&logo=javascript&logoColor=black"/>
-  <img src="https://img.shields.io/badge/Git-F05032?style=for-the-badge&logo=git&logoColor=white"/>
-  <img src="https://img.shields.io/badge/GitHub-181717?style=for-the-badge&logo=github&logoColor=white"/>
-  <img src="https://img.shields.io/badge/VS%20Code-007ACC?style=for-the-badge&logo=visual-studio-code&logoColor=white"/>
-</p>
-
----
-
-## 📚 Em aprendizado contínuo
-
-- Lógica de programação  
-- Estruturas de dados  
-- Banco de dados  
-- Backend com Java  
-- Sistemas corporativos  
-
----
-
-## 📊 GitHub Stats
+## ⚙️ Tecnologias
 
 <p align="center">
-  <img height="160em" src="https://github-readme-stats.vercel.app/api?username=ViniciosMarques&show_icons=true&theme=radical"/>
-  <img height="160em" src="https://github-readme-stats.vercel.app/api/top-langs/?username=ViniciosMarques&layout=compact&theme=radical"/>
+
+<img src="https://skillicons.dev/icons?i=java,javascript,git,github,linux,vscode" />
+
 </p>
 
 ---
 
-## 📫 Contato
+## 📚 Em aprendizado
 
-<p>
-  <a href="https://github.com/ViniciosMarques">
-    <img src="https://img.shields.io/badge/GitHub-000?style=for-the-badge&logo=github"/>
-  </a>
-  <a href="SEU_LINK_DO_LINKEDIN_AQUI">
-    <img src="https://img.shields.io/badge/LinkedIn-0A66C2?style=for-the-badge&logo=linkedin"/>
-  </a>
+- Java Backend  
+- Banco de dados  
+- Estruturas de dados  
+- APIs REST  
+- Lógica avançada  
+
+---
+
+## 🌐 Contato
+
+<p align="center">
+
+<a href="https://github.com/ViniciosMarques">
+  <img src="https://img.shields.io/badge/GitHub-000?style=for-the-badge&logo=github"/>
+</a>
+
+<a href="COLE_SEU_LINK_LINKEDIN">
+  <img src="https://img.shields.io/badge/LinkedIn-0A66C2?style=for-the-badge&logo=linkedin"/>
+</a>
+
 </p>
+
+---
+
+<div align="center">
+
+<img src="https://capsule-render.vercel.app/api?type=waving&color=0D1117&height=120&section=footer"/>
+
+</div>
